--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
     "postinstall": "node node_modules/bower/bin/bower install"
   },
   "devDependencies": {
+    "bower": "^1.2.8",
+    "chai": "^1.9.0",
     "grunt": "^0.4.2",
-    "grunt-contrib-livereload": "0.1.2",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt-angular-templates": "^0.5.3",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-mocha": "^0.4.10",
-    "grunt-angular-templates": "^0.5.3",
-    "grunt-contrib-jshint": "^0.8.0",
-    "grunt-dom-munger": "^3.4.0",
     "grunt-contrib-htmlmin": "^0.2.0",
     "grunt-contrib-imagemin": "^0.5.0",
-    "grunt-ngmin": "^0.0.3",
+    "grunt-contrib-jshint": "^0.8.0",
     "grunt-contrib-less": "^0.10.0",
+    "grunt-contrib-livereload": "0.1.2",
+    "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.5.3",
+    "grunt-dom-munger": "^3.4.0",
+    "grunt-mocha": "^0.4.10",
+    "grunt-ngmin": "^0.0.3",
+    "grunt-ssh": "^0.11.2",
     "mocha": "^1.17.1",
-    "chai": "^1.9.0",
     "sinon": "^1.8.2",
-    "sinon-chai": "^2.5.0",
-    "bower": "^1.2.8"
+    "sinon-chai": "^2.5.0"
   }
 }
