--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
   "name": "ingr-web",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "description": "Instagrannar web app",
+  "main": "index.html",
   "scripts": {
     "postinstall": "node node_modules/bower/bin/bower install"
   },
+  "author": "Alexander Czigler",
+  "license": "MIT",
   "devDependencies": {
-    "bower": "^1.2.8",
-    "chai": "^1.9.0",
-    "grunt": "^0.4.2",
-    "grunt-angular-templates": "^0.5.3",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.2.0",
-    "grunt-contrib-imagemin": "^0.5.0",
-    "grunt-contrib-jshint": "^0.8.0",
-    "grunt-contrib-less": "^0.10.0",
-    "grunt-contrib-livereload": "0.1.2",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-dom-munger": "^3.4.0",
-    "grunt-mocha": "^0.4.10",
-    "grunt-ngmin": "^0.0.3",
-    "grunt-ssh": "^0.11.2",
-    "mocha": "^1.17.1",
-    "sinon": "^1.8.2",
-    "sinon-chai": "^2.5.0"
+    "assemble": "^0.4.41",
+    "bower": "^1.3.5",
+    "chai": "^1.9.1",
+    "crypto": "0.0.3",
+    "googlemaps": "^0.1.9",
+    "gulp": "^3.8.0",
+    "gulp-assemble": "^0.1.7",
+    "gulp-awspublish": "^0.0.20",
+    "gulp-concat": "^2.3.3",
+    "gulp-debug": "^0.3.0",
+    "gulp-foreach": "0.0.1",
+    "gulp-htmlmin": "^0.1.3",
+    "gulp-jshint": "^1.7.1",
+    "gulp-less": "^1.2.3",
+    "gulp-livereload": "^2.1.0",
+    "gulp-mocha": "^0.5.1",
+    "gulp-plumber": "^0.6.2",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^0.3.1",
+    "gulp-watch": "^0.6.5",
+    "gulp-webserver": "^0.3.4",
+    "handlebars": "^2.0.0-alpha.4",
+    "jshint-stylish": "^0.4.0",
+    "marked": "^0.3.2",
+    "proxyquire": "^1.0.1",
+    "rimraf": "^2.2.8",
+    "sinon": "^1.10.3",
+    "sinon-chai": "^2.5.0",
+    "yaml-front-matter": "^3.0.1",
+    "moment": "^2.7.0"
   }
 }
