--- a/package.json
+++ b/package.json
@@ -14,6 +14,23 @@
     "chai": "^1.9.1",
     "crypto": "0.0.3",
     "googlemaps": "^0.1.9",
+    "grunt": "^0.4.5",
+    "grunt-angular-templates": "^0.5.7",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.8.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-dom-munger": "^3.4.0",
+    "grunt-mocha": "^0.4.11",
+    "grunt-ngmin": "0.0.3",
+    "grunt-ssh": "^0.11.2",
     "gulp": "^3.8.0",
     "gulp-assemble": "^0.1.7",
     "gulp-awspublish": "^0.0.20",
@@ -33,11 +50,11 @@
     "handlebars": "^2.0.0-alpha.4",
     "jshint-stylish": "^0.4.0",
     "marked": "^0.3.2",
+    "moment": "^2.7.0",
     "proxyquire": "^1.0.1",
     "rimraf": "^2.2.8",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0",
-    "yaml-front-matter": "^3.0.1",
-    "moment": "^2.7.0"
+    "yaml-front-matter": "^3.0.1"
   }
 }
