--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "angular-ui-router": "^0.2.9",
     "less": "^1.7.0",
     "moment": "^2.5.1",
-    "angular-google-maps": "^1.0.0"
+    "angular-google-maps": "^1.0.0",
+    "bootstrap": "3.1.1",
+    "font-awesome": "^4.0.3"
   }
 }
