Fixed grunt mocha issues.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ingr-web",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Instagrannar web app",
   "main": "index.html",
   "scripts": {
@@ -31,25 +31,10 @@
     "grunt-mocha": "^0.4.11",
     "grunt-ngmin": "0.0.3",
     "grunt-ssh": "^0.11.2",
-    "gulp": "^3.8.0",
-    "gulp-assemble": "^0.1.7",
-    "gulp-awspublish": "^0.0.20",
-    "gulp-concat": "^2.3.3",
-    "gulp-debug": "^0.3.0",
-    "gulp-foreach": "0.0.1",
-    "gulp-htmlmin": "^0.1.3",
-    "gulp-jshint": "^1.7.1",
-    "gulp-less": "^1.2.3",
-    "gulp-livereload": "^2.1.0",
-    "gulp-mocha": "^0.5.1",
-    "gulp-plumber": "^0.6.2",
-    "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^0.3.1",
-    "gulp-watch": "^0.6.5",
-    "gulp-webserver": "^0.3.4",
     "handlebars": "^2.0.0-alpha.4",
     "jshint-stylish": "^0.4.0",
     "marked": "^0.3.2",
+    "mocha": "^1.21.4",
     "moment": "^2.7.0",
     "proxyquire": "^1.0.1",
     "rimraf": "^2.2.8",
