--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "grunt-ssh": "^0.11.2",
     "handlebars": "^2.0.0-alpha.4",
     "jshint-stylish": "^0.4.0",
+    "karma": "^0.12.28",
     "marked": "^0.3.2",
     "mocha": "^1.21.4",
+    "mocha-osx-reporter": "^0.1.2",
     "moment": "^2.7.0",
     "proxyquire": "^1.0.1",
     "rimraf": "^2.2.8",
