--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,10 @@
     "moment": "^2.5.1",
     "angular-google-maps": "^1.2.0",
     "bootstrap": "3.1.1",
-    "font-awesome": "^4.0.3"
+    "font-awesome": "^4.0.3",
+    "angular-cookies": "~1.3.7",
+    "momentjs": "~2.8.4"
+  },
+  "devDependencies": {
   }
 }
