--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,9 @@ box: wercker/nodejs
 build:
   # The steps that will be executed on build
   steps:
-    # A step that executes `npm install` command
+    - script:
+        name: install bower
+        code: sudo npm install -g bower
     - npm-install
     - bower-install
     
