--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-dom-munger": "^3.4.0",
     "grunt-mocha": "^0.4.11",
     "grunt-ngmin": "0.0.3",
+    "grunt-sftp-deploy": "^0.2.2",
     "grunt-ssh": "^0.11.2",
     "handlebars": "^2.0.0-alpha.4",
     "jshint-stylish": "^0.4.0",
