Modified wercker.yml and build stuff.

--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "mocha": "^1.21.4",
     "mocha-osx-reporter": "^0.1.2",
     "moment": "^2.7.0",
+    "progress": "^1.1.8",
     "proxyquire": "^1.0.1",
     "rimraf": "^2.2.8",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0",
+    "ssh2": "^0.3.6",
     "yaml-front-matter": "^3.0.1"
   }
 }
