--- a/wercker.yml
+++ b/wercker.yml
@@ -6,4 +6,4 @@ build:
         name: grunt build
         code: |
           sudo npm install -g grunt-cli
-          grunt build
+          grunt stage
